# VRP-RL

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: test.yaml
examples/: 1.quickstart-hcvrp.ipynb  4.test.ipynb  cvrp reinforce.py  cvrp.py  hcvrp.py
examples/HCVRP_PO/: collect_feedback.py  train_dpo.py
examples/PO/: README_preference_optimization.md  collect_feedback.py  compare_dpo.py  compare_dpo_new.py  process_reward.py  train_dpo.py  train_preference.py
examples/PO/Plot/: plot.py
parco/baselines/mapdp/: decoder.py  decoding_strategies.py  encoder.py  model.py  policy.py
parco/baselines/mapdp/env_embeddings/: __init__.py  omdcpdp.py
parco/baselines/ortools/: main.py  solver.py
parco/envs/ffsp/: env.py
parco/envs/hcvrp/: env.py  render.py
parco/envs/omdcpdp/: env.py
parco/models/: agent_handlers.py  amppo.py  decoder.py  decoding_strategies.py  decoding_strategies_ppo.py  encoder.py  policy.py  policy_ppo.py  rl.py
parco/models/nn/: transformer.py
scripts/: download_hf.py  generate_data.py  run_ortools.py
tests/: test.py
