[project]
name = "parco"
version = "0.2.0"
description = "Parallel AutoRegressive Models for Multi-Agent Combinatorial Optimization"
authors = [
    {name = "Federico Berto", email = "berto.federico2@gmail.com"},
    {name = "Chuanbo Hua", email = "cbhua@kaist.ac.kr"},
    {name = "Laurin Luttmann", email = "laurin.luttmann@gmail.com"},
    {name = "Jiwoo Son"},
    {name = "Junyoung Park"},
    {name = "Kyuree Ahn"},
    {name = "Changhyun Kwon"},
    {name = "Lin Xie"},
    {name = "Jinkyoo Park"}
]
license = "MIT"
dependencies = [
    "rl4co>=0.5.2",
    "ipykernel",
    "ortools>=9.11.4210",
    "huggingface-hub[cli]>=0.30.2",
]
requires-python = ">=3.10"
readme = "README.md"


[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["parco"]

[tool.hatch.build.targets.wheel]
include = ["parco"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 90
show-fixes = false
target-version = "py311"
task-tags = ["TODO", "FIXME"]
ignore = ["E501"] # never enforce `E501` (line length violations), done in Black

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1
